# Pipeline-in-a-box

./: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: api.py  celery_app.py  task.py
tests/: test_api.py  test_task.py
tests/files/: invalid_dna.txt  mixed_case_dna.txt  sample_dna.txt
tests/integration/: test_integration.py
