[project]
name = "pipeline-in-a-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "flask>=3.1.3",
    "redis>=7.4.0",
    "valkey>=6.1.1",
    "pytest>=8.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
pythonpath = "."
